RESOLVED FIXED215516
RenderTextControlSingleLine::scroll* functions should not call Element::scroll* on the inner text element
https://bugs.webkit.org/show_bug.cgi?id=215516
Summary RenderTextControlSingleLine::scroll* functions should not call Element::scrol...
alan
Reported 2020-08-14 10:51:38 PDT
...instead it should call the inner text element's renderer scroll functions.
Attachments
Patch (3.46 KB, patch)
2020-08-14 15:15 PDT, alan
no flags
Patch (3.46 KB, patch)
2020-08-14 15:23 PDT, alan
no flags
alan
Comment 1 2020-08-14 10:51:54 PDT
alan
Comment 2 2020-08-14 15:15:46 PDT
Simon Fraser (smfr)
Comment 3 2020-08-14 15:18:09 PDT
Comment on attachment 406625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406625&action=review > Source/WebCore/ChangeLog:10 > + The clients of these functions expect the geometry data to be inline with the rest of the rendering context in-line or "agree with"? "inline" here confusing in this context.
Darin Adler
Comment 4 2020-08-14 15:20:51 PDT
Comment on attachment 406625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406625&action=review >> Source/WebCore/ChangeLog:10 >> + The clients of these functions expect the geometry data to be inline with the rest of the rendering context > > in-line or "agree with"? "inline" here confusing in this context. Could use the word "consistent"
alan
Comment 5 2020-08-14 15:23:07 PDT
Darin Adler
Comment 6 2020-08-14 15:27:37 PDT
Comment on attachment 406626 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406626&action=review > Source/WebCore/rendering/RenderTextControlSingleLine.cpp:360 > + if (auto innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer()) Wow, didn’t know about this syntax!
alan
Comment 7 2020-08-14 15:35:01 PDT
(In reply to Darin Adler from comment #6) > Comment on attachment 406626 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=406626&action=review > > > Source/WebCore/rendering/RenderTextControlSingleLine.cpp:360 > > + if (auto innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer()) > > Wow, didn’t know about this syntax! I discovered it a couple of months ago and been using it heavily ever since. It's super convenient (and the "discovered" part most likely went like: 1. me looking at Antti's patch. 2. wow, didn't know about this syntax!)
EWS
Comment 8 2020-08-14 17:28:57 PDT
Committed r265722: <https://trac.webkit.org/changeset/265722> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406626 [details].
Note You need to log in before you can comment on or make changes to this bug.