Cherry-pick r265722. rdar://problem/67284309

RenderTextControlSingleLine::scroll* functions should not call Element::scroll* on the inner text content
    https://bugs.webkit.org/show_bug.cgi?id=215516
    <rdar://problem/64739768>

    Reviewed by Simon Fraser.

    Normally the RenderBox::content*, border*, padding* and scroll* functions grab the geometry information from the renderer itself.
    The clients of these functions expect the geometry data to be consistent with the rest of the rendering context
    (e.g coordinates are in the coordinate system of the containing block, paint time operations are not applied etc).
    Also these functions are supposed to be const. They should not mutate the geometry or the render tree itself.
    Forwarding ::scroll* calls to Element::scroll* can't guarantee neither of these above.

    * rendering/RenderTextControlSingleLine.cpp:
    (WebCore::RenderTextControlSingleLine::scrollWidth const):
    (WebCore::RenderTextControlSingleLine::scrollHeight const):
    (WebCore::RenderTextControlSingleLine::scrollLeft const):
    (WebCore::RenderTextControlSingleLine::scrollTop const):

    Canonical link: https://commits.webkit.org/228300@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265722 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/227865.78@safari-610.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1-branch@265800 268f45cc-cd09-0410-ab3c-d52691b4dbfc